--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 pillow==10.2.0
 platformdirs==2.4.0
-psycopg2==2.9.1
+psycopg2-binary==2.9.9
 pydantic==2.6.1
 pydantic_core==2.16.2
 PyJWT==2.3.0
