feat: update course v2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,30 @@
-alembic==1.7.4
-annotated-types==0.6.0
-black==21.9b0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==7.1.2
-dnspython==2.2.1
-email-validator==1.2.1
-Flask==2.0.2
-Flask-Cors==3.0.10
-Flask-JWT-Extended==4.3.1
-Flask-Migrate==3.1.0
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
-greenlet==3.0.3
-gunicorn==20.1.0
-idna==3.3
-importlib-metadata==4.8.1
-importlib-resources==5.2.2
-itsdangerous==2.1.2
-Jinja2==3.1.1
-Mako==1.1.5
-MarkupSafe==2.0.1
-mypy-extensions==0.4.3
-pathspec==0.9.0
-pillow==10.2.0
-platformdirs==2.4.0
-psycopg2-binary==2.9.9
-pydantic==2.6.1
-pydantic_core==2.16.2
-PyJWT==2.3.0
-pystray==0.19.2
-python-dotenv==0.19.2
-regex==2021.10.21
-requests==2.26.0
-six==1.16.0
-spectree==1.2.9
-SQLAlchemy==1.4.25
-tomli==1.2.1
-typing_extensions==4.9.0
-urllib3==1.26.7
-Werkzeug==2.1.1
-zipp==3.6.0
+alembic==1.16.5
+annotated-types==0.7.0
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
+Flask==3.1.2
+flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+pillow==11.3.0
+psycopg==3.2.10
+psycopg-binary==3.2.10
+pydantic==2.11.9
+pydantic_core==2.33.2
+PyJWT==2.10.1
+pystray==0.19.5
+python-dotenv==1.1.1
+six==1.17.0
+spectree==1.5.7
+SQLAlchemy==2.0.43
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+Werkzeug==3.1.3
